botão de cinza para azul

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --branco-principal:#FFFFFF;
     --cinza-secundario:#c0c0c0;
-    --botao-azul:#9190b4;
+    --botao-azul:#1d17d3;
     --botao-azul-efeito:#7cb0f0;
     --cor-de-fundo:#00030c;
     --fonte-principal:'Inter';    
